--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "rxjs": "~6.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^8.1.0",
+    "@ngrx/store": "^8.1.0",
+    "bootstrap": "^4.3.1",
+    "ngrx": "^2.0.1",
+    "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
